@@ -266,6 +266,14 @@ Template: base-installer/debootstrap/info/basesuccess
 Type: text
 _Description: Base system installed successfully.
 
+Template: base-installer/debootstrap/fallback-warning
+Type: text
+_Description: ${SECTION}: ${INFO}...
+
+Template: base-installer/debootstrap/warning/retrying
+Type: text
+_Description: Retrying failed download of ${SUBST0}
+
 Template: base-installer/section/configure_apt
 Type: text
 _Description: Configuring APT sources...
